# sre-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pyrightconfig.json  readme.md
dashboards/: sre-assistant-sli.json
docs/: architecture.md  code-flow.md  dependencies.md  eval-quality.md  phase-7-design.md  tool-reference.md
runbooks/: cloudflared-tunnel.md  disk-management.md  dns-stack.md  grafana-home-server-dashboard.md  loki-logging.md  mailcow.md  media-vm.md  mikrotik-monitoring.md  nfs-smb-shares.md  quiet-hours.md  systemd-services.md  tailscale-vpn.md  traefik-reverse-proxy.md  truenas-storage.md  ups-power.md
scripts/: ingest_runbooks.py  install-hooks.sh  run_eval.py  run_report.py
src/: cli.py  config.py
src/agent/: agent.py  (+3 more)
tests/: conftest.py  test_agent.py  test_api_integration.py  test_disk_status.py  test_disk_status_integration.py  test_embeddings.py  test_eval.py  test_eval_integration.py  test_grafana_alerts.py  test_grafana_alerts_integration.py  test_grafana_dashboards.py  test_grafana_dashboards_integration.py  test_history.py  test_loki.py  test_loki_integration.py  test_memory.py  test_memory_context.py  test_memory_enrichment_integration.py  test_memory_integration.py  test_observability.py  test_observability_integration.py  test_pbs.py  test_pbs_integration.py  test_prometheus_integration.py  test_prometheus_tool.py  test_proxmox.py  test_proxmox_integration.py  test_proxy_support.py  test_report.py  test_report_integration.py  test_runbook_search.py  test_truenas.py  (+1 more)
(+61 files in other folders)
